spinner desktop done and z-index bug fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,8 @@ ul {
       height: 100vh;
       padding: 0;
       padding-top: 54px;
+      flex-direction: row;
+      justify-content: center;
     }
   }
 }
