--- a/src/Spinner/style.scss
+++ b/src/Spinner/style.scss
@@ -19,3 +19,13 @@
     top: 67px;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .spinner {
+    width: 40px;
+    height: 40px;
+    border: 3px solid #ddd;
+    border-top-color: #bcbcbc;
+    margin-top: 45px;
+  }
+}
